--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Chickens is a simple, location-based app that connects people who raise backyard chickens with nearby folks looking for fresh eggs. Sellers can list available eggs, acreage size, and delivery options. Buyers can browse local listings and get a visual sense of how the chickens are raised. This is a simple app built with React, Leaflet, and Google Maps API."
+    />
+    <title>Chickens</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+    <div id="root"></div>
+  </body>
+</html>
 
